<resources>
    <string name="app_name">MyPassport</string>
    <string name="date_id">433</string>
    <string name="pass">郑州大学通行码</string>
    <string name="waring">提醒：未检索到你今日出校记录</string>
    <string name="school">计算机学院.白冰玉</string>
    <string name="change">【切换账号】</string>
    <string name="gate">主校区大门南门.</string>
    <string name="enter">入口</string>
    <string name="identify">身份：正常出入校园领导</string>
    <string name="date">（03月16日 20:19获取）</string>
    <string name="hesr">不再检测核酸时间</string>
    <string name="yimn">新冠疫苗接种3剂次</string>
    <string name="address">定位河南省郑州市中原区科学大道100号附近</string>
    <string name="copyright️">郑州大学疫情防控领导小组、保卫处、信息化办公室</string>
</resources>