<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".passport">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="675sp"
        android:layout_marginHorizontal="9sp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="268"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="160"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:src="@drawable/logo">

                </ImageView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/pass"
                    android:textColor="@color/pass"
                    android:textSize="25dp"
                    android:typeface="serif">

                </TextView>
            </LinearLayout>


            <TextView
                android:id="@+id/passportid"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="130"
                android:gravity="center"
                android:text="@string/date_id"
                android:textColor="@color/purple"
                android:textSize="100sp"
                android:textStyle="bold"
                android:typeface="serif">

            </TextView>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1sp"
            android:background="#dfdfdf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="280"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2sp"
                    android:gravity="center_vertical"
                    android:text="@string/school"
                    android:textColor="@color/blue"
                    android:textSize="17sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/change"
                    android:textColor="@color/blue"
                    android:textSize="13sp">

                </TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2sp"
                    android:gravity="center_vertical"
                    android:text="@string/gate"
                    android:textColor="@color/blue"
                    android:textSize="17sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/green"
                    android:gravity="center_vertical"
                    android:text="@string/enter"
                    android:textColor="@color/yellow"
                    android:textSize="17sp"></TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="2sp"
                    android:gravity="center_vertical"
                    android:text="@string/identify"
                    android:textColor="@color/blue"
                    android:textSize="17sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="-3dp"
                    android:gravity="center_vertical"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="12sp">

                </TextView>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            </View>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="96"
            android:gravity="center_vertical"
            android:text="@string/waring"
            android:textColor="@color/warning"
            android:textStyle="normal">

        </TextView>

        <LinearLayout
            android:id="@+id/flash"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="924"
            android:background="@drawable/frame2">

            <ImageView
                android:id="@+id/handsomeme"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="18dp"
                android:layout_marginVertical="18dp"
                android:src="@drawable/picture">

            </ImageView>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5sp"
            android:layout_marginBottom="5sp"
            android:background="#dfdfdf" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="220"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@drawable/shape"
                android:gravity="center"
                android:text="@string/hesr">

            </TextView>

            <View
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:background="@drawable/shape2"
                android:gravity="center"
                android:minLines="2"
                android:text="@string/yimn"
                android:textSize="16sp">

            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button"
                android:layout_width="0sp"
                android:layout_height="20sp"
                android:layout_weight="10"
                android:background="#00000000">

            </Button>

            <View
                android:layout_width="0sp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="start"
                android:minLines="2"
                android:text="@string/address"
                android:textColor="@color/blue"
                android:textSize="12sp">

            </TextView>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="5sp"
            android:background="#dfdfdf" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/copyright️">

        </TextView>
    </LinearLayout>


</LinearLayout>